@@ -4,8 +4,10 @@ Revision history for Perl extension RPi::WiringPi.
         - POD cleanup
         - cleanup() added, puts each registered pin in INPUT mode, and disables
           PUD if set
-        - re-added register_pin(), we now keep track of objects, as well as
-          GPIO numbers for cleanup
+        - re-added register_pin(), we no longer keep track of objects, just the
+          GPIO scheme numbers for cleanup and error checking
+        - removed unregister_pin()
+        - we now die() if trying to use a pin that is already in use
 
 0.99_05 2016-08-18
         - added Util::_sys_mode() to determine if we need wrappers for certain
